traces/bug_568.txt
src/fflib/problem.cpp:901: error: DEAD_STORE
  The value written to &umn (type double) is never used.
Showing all 1 steps of the trace


src/fflib/problem.cpp:901:21: Write of unused value
899.                       
900.                   {
901.                       double umx=std::numeric_limits<double>::min(),umn=std::numeric_limits<double>::max();
                           ^
902.                       for(int i=0;i<4;++i)
903.                       {
